[package]
name = "photosort"
version = "0.4.0"
edition = "2021"
authors = ["Alexandre Negrel <negrel.dev@protonmail.com>"]
homepage = "https://github.com/negrel/photosort"
repository = "https://github.com/negrel/photosort"
license = "MIT"

[profile.release]
strip = true
lto = true
debug = false

[lib]
name = "photosort"
path = "src/lib.rs"

[[bin]]
name = "photosort"
path = "src/bin/photosort/main.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9"
symlink = "0.1.0" # Cross-platform symlink
serde = { version = "1.0.143", features = ["derive"] } # serialization & deserialization
toml = "0.5"
thiserror = "1.0"
notify = "5.0"
clap = { version = "4.0", features = ["derive", "cargo"] }
daemonize = "0.4.1"
kamadak-exif = "0.5.4"
chrono = "0.4.22" 
regex = "1.6.0"
serde_regex = "1.1.0"
lazy_static = "1.4.0"

[dev-dependencies]
uuid = { version = "1.1.2", features = ["v4"] }

